# MagicEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compileShaders.bat  main.cpp  root.magic.in
CommonCode/: AABB.h  CMakeLists.txt  Log.cpp  Model.h  Vertex.h
CommonCode/Math/: Math.h  Matrix4f.h  Vector4f.cpp  Vector4f.h
DataLibCode/: CMakeLists.txt  Data.h  DataSerialization.h  Import.h  ImportGLTF.cpp  ImportGLTF.h  TestHeader.h  main.cpp
DataLibCode/debug/: debugSphere.gltf  error.gltf
DataLibCode/ue5level/: ue5level.gltf
EngineCode/: Allocators.h  Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  BinaryBlob.h  BindlessManager.cpp  BindlessManager.h  Buffer.h  Camera.cpp  Camera.h  CommandEncoder.cpp  CommandEncoder.h  CompileTimeConstants.h  DefaultTexture.h  DisableWarnings.h  ECS.cpp  ECS.h  Entity.h  EventArgs.h  GPUContext.cpp  GPUContext.h  Game.cpp  Game.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.h  Input.h  JobSystem.cpp  JobSystem.h  Limits.h  MemoryManager.cpp  MemoryManager.h  Mesh.h  MeshEntity.cpp  MeshEntity.h  Model.h  Platform.h  Renderable.h  Renderer.cpp  (+25 more)
EngineCode/Common/: BinaryBlob.h  Log.cpp  Log.h
EngineCode/Common/Math/: Math.h  Matrix4f.cpp  Vector2f.h
EngineCode/Components/: NameComponent.h  RenderableComponent.h  RenderableMeshComponent.h  TransformComponent.h
EngineCode/Editor/: Editor.cpp  Editor.h
EngineCode/Math/: Vector3f.cpp  Vector3f.h
EngineCode/Platform/: WindowsHeader.h
EngineCode/Vulkan/: Debug.h  Extensions.h  Helpers.h  Include.h  VMAInclude.h
GameCode/: Game.cpp  Game.h  MyGame.cpp  MyGame.h  PlayerComponent.h  PlayerMovementSystem.h  RenderSystem.h  TestSystem.h  magic.db  magic.world
Shaders/: aabbPixel.hlsl  aabbPixel.pixel.spv  aabbVertex.hlsl  aabbVertex.vertex.spv  triangleDebug.hlsl  trianglePixel.hlsl  trianglePixel.pixel.spv  trianglePixelVertexColorsOnly.hlsl  trianglePixelVertexColorsOnly.pixel.spv  triangleVertex.hlsl  triangleVertex.vertex.spv
